--- a/css/appointment.css
+++ b/css/appointment.css
@@ -1,7 +1,7 @@
 /***appointment***/
 
 .bg-appo{
-  background-image: url("../assets/img/appointment.png");
+  background-image: url("../assets/img/appointment.webp");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
