--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,7 +1,7 @@
 /***testimonials***/
 
 .cont-height-6{
-  background-image: url("../assets/img/Testimonials.png");
+  background-image: url("../assets/img/Testimonials.webp");
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: center;
