--- a/css/pages/about-me.css
+++ b/css/pages/about-me.css
@@ -1,5 +1,5 @@
 .bg-abt{
-  background-image: url("../../assets/img/banner-img2.png");
+  background-image: url("../../assets/img/banner-img2.webp");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
