--- a/css/pages/gallery.css
+++ b/css/pages/gallery.css
@@ -1,7 +1,7 @@
 /****gallery***/
 
 .bg-gallery{
-  background-image: url("../../assets/img/banner-img1.png");
+  background-image: url("../../assets/img/banner-img1.webp");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
