--- a/css/pages/services-details.css
+++ b/css/pages/services-details.css
@@ -1,7 +1,7 @@
 /****services details**/
 
 .bg-ser-det{
-  background-image: url("../../assets/img/banner-img3.png");
+  background-image: url("../../assets/img/banner-img3.webp");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
