--- a/css/nav.css
+++ b/css/nav.css
@@ -7,9 +7,10 @@
   background-color: var(--light-grey);
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 9999999;
   width: 100%;
   padding: 0em 7em;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
 .navbar-br a{
   font-family: var(--font-primary);
