--- a/css/services.css
+++ b/css/services.css
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  justify-items: baseline;
   gap: 2rem;
 }
 
@@ -23,8 +24,11 @@
   width: 100%;
   max-width: 16.75rem;
   height: auto;
-  transition: .3s;
+  border-radius: 8px;
+  padding: 1rem;
+  gap: 2rem;
 }
+
 
 .cards-text-flex {
   text-align: center;
@@ -45,7 +49,6 @@
   font-weight: 400;
   color: var(--black);
 }
-
 
 
 /* Responsive */
