--- a/css/appointment.css
+++ b/css/appointment.css
@@ -6,7 +6,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 80vh;
+  min-height: clamp(10vh, 70vh + 1vw, 100vh);
 }
 .appo-text h2{
   font-size: clamp(2.5rem, 1.702rem + 2.553vw, 4rem);
