--- a/css/header.css
+++ b/css/header.css
@@ -62,10 +62,13 @@
 /* Modal Header */
 .modal-header {
   border-bottom: none;
+  padding: 2rem !important;
+  padding-bottom: 0 !important;
 }
 
 .modal-title {
   font-weight: 600;
+  font-size: 1.5rem;
   color: var(--brown);
   margin: 0 !important;
   font-family: var(--font-primary);
