--- a/css/nav.css
+++ b/css/nav.css
@@ -25,7 +25,7 @@
   gap: 2rem;
 }
 .op a{
-  transition: ease .3s;
+  transition: ease .5s;
   cursor: pointer;
 }
 .op a:hover{
@@ -57,8 +57,9 @@
 }
 .flags_item_img{
   display: block;
+  width: 26px;
   cursor: pointer;
-  border-radius: 50%; 
+  border-radius: 50px; 
 }
 .flags_item {
   width: 100%;
@@ -68,7 +69,7 @@
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
-  border-radius: 50%; 
+  border-radius: 50px; 
   background-color: transparent;
   transition: transform 0.3s ease;  
 }
