--- a/css/products.css
+++ b/css/products.css
@@ -1,7 +1,7 @@
 /***products***/
 
 .cont-height-3 {
-  min-height: 100vh; 
+  min-height: clamp(50vh, 80vh + 1vw, 100vh);
   padding: 4rem 0rem;
 }
 .prod-f {
@@ -14,6 +14,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+.prod-text{
+  text-align: justify;
 }
 .prod-text h3, .gal-title {
   font-size: clamp(1.563rem, 1.064rem + 2vw, 2.2rem);
@@ -28,7 +31,7 @@
   font-family: var(--font-secondary);
   color: var(--black);
   font-weight: 400;
-  line-height: 1.7; 
+  line-height: 1.7;
 }
 .bold {
   color: var(--brown);
@@ -57,11 +60,7 @@
   .padding-prod{
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 20px;
-  }
-  .prod-text{
-    text-align: center;
   }
   .img-resp { 
     display: flex;
@@ -77,11 +76,7 @@
   .padding-prod{
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 20px;
-  }
-  .prod-text{
-    text-align: center;
   }
   .img-resp {
     display: flex;
@@ -97,11 +92,7 @@
   .padding-prod{
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 20px;
-  }
-  .prod-text{
-    text-align: center;
   }
   .img-resp {
     display: flex;
