--- a/css/services.css
+++ b/css/services.css
@@ -1,7 +1,7 @@
 /***services***/
 
 .cont-height-2 {
-  min-height: 130vh;
+  min-height: clamp(10vh, 70vh + 1vw, 100vh);
   padding: 4rem 0rem;
 }
 
