--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: center;
-  min-height: 100vh;
+  min-height: clamp(10vh, 70vh + 1vw, 100vh);
 }
 .test-text{
   font-size: clamp(1rem, 0.968rem + 1.702vw, 2.5rem);
