--- a/css/pages/productos.css
+++ b/css/pages/productos.css
@@ -1,9 +1,3 @@
-:root {
-  --clr-white: #ececec;
-  --clr-gray: #e2e2e2;
-  --clr-red: #961818;
-}
-
 
 /****productos***/
 
@@ -133,7 +127,7 @@
   padding: .8rem;
   display: flex;
   flex-direction: column;
-  gap: .25rem;
+  gap: 1.25rem;
   font-family: var(--font-secondary);
 }
 
@@ -156,7 +150,7 @@
 
 .producto-agregar:hover {
   background-color: var(--light-brown);
-  color: var(--clr-white);
+  color: var(--white);
 }
 /*** MEDIA QUERIES ***/
 
