--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,9 @@
 .header-flex{
   display: flex;
   align-items: flex-end;
-  min-height: clamp(40vh, 95vh + 1vw, 110vh);
+  height: clamp(10vh, 80vh + 10vw, 110vh);
   justify-content: center;
+  padding-bottom: 3rem;
 }
 .header-text h1{
   font-size: clamp(2.5rem, 1.436rem + 3.404vw, 4.5rem);
@@ -159,6 +160,10 @@
   .header-flex{
     justify-content: center;
     align-items: center;
+    padding-bottom: 0;
+  }
+  .header-text{
+    padding: 1rem;
   }
 }
 
@@ -169,6 +174,7 @@
   .header-flex{
     justify-content: center;
     align-items: center;
+    padding-bottom: 0;
   }
 }
 
