--- a/css/pages/carrito.css
+++ b/css/pages/carrito.css
@@ -120,8 +120,11 @@
         font-size: 16px;
     }
     .carrito-acciones{
-    display: flex;
-    flex-wrap: wrap-reverse;
-    gap: 2rem;
+        display: flex;
+        flex-wrap: wrap-reverse;
+        gap: 2rem;
+    }
+    .carrito-producto{
+        font-size: 0.7rem;
     }
 }
