--- a/css/about-me.css
+++ b/css/about-me.css
@@ -36,6 +36,7 @@
   box-shadow: 0px 4px 45px 0px #0000002E;
   transition: ease-in .1s;
   text-decoration: none;
+  margin: 0;
 }
 
   /* Responsive */
