--- a/css/nav.css
+++ b/css/nav.css
@@ -11,8 +11,11 @@
   top: 0;
   z-index: 999;
   width: 100%;
-  padding: 0em 7em;
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
+  padding: 0 5em;
+}
+.navbar-br{
+  margin: 0;
 }
 .navbar-br a{
   font-family: var(--font-primary);
@@ -62,8 +65,9 @@
   text-decoration: none;
   text-transform: capitalize;
 }
-.nav-block{
+.nav-block, .icon-block{
   display: flex;
+  align-items: center;
 }
 .flags{
   width: 100px;
@@ -89,6 +93,10 @@
   background-color: transparent;
   transition: transform 0.3s ease;  
 }
+.flags_item:hover {
+  transform: scale(1.1);
+  background-color: rgba(0,0,0,0.05);
+}
 
 .flags_item.selected {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -96,11 +104,11 @@
 }
 
 @media (width < 575.99px){
-  .nav-block{
+  .nav-block, .icon-block{
     display: none;
   }
   .sticky-nav{
-    padding: 0em 2em;
+    padding: 0 1.5em;
   }
   .he-nav{
     padding: 0.5rem;
@@ -108,7 +116,7 @@
 }
 
 @media (min-width: 576px) and (max-width: 991.99px){
-  .nav-block{
+  .nav-block, .icon-block{
     display: none;
   }
 }
