--- a/css/pages/carrito.css
+++ b/css/pages/carrito.css
@@ -10,6 +10,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin: 0;
+    width: 100%;
 }
 .lista{
     display: flex;
@@ -17,12 +19,23 @@
     flex-direction: column;
     width: 100%;
     min-height: 50vh;
-    padding: 8em 1em;
+    padding: 4em 2em;
+    margin-top: 2rem;
 }
 .volver{
-    font-size: 20px;
-    color:black;
     padding: 20px 0px;
+    margin: 0;
+}
+.volver a i {
+    transition: transform .2s ease;
+}
+.volver a:hover i {
+    transform: translateX(-4px);
+}
+
+.th-font{
+    font-family: var(--font-secondary);
+    color:black;
 }
 .carrito-producto {
     font-family: var(--font-secondary);
@@ -31,11 +44,11 @@
     border-radius: 1rem;
 }
 
+
 .carrito-producto-imagen {
     width: 3rem;
     border-radius: 1rem;
 }
-
 .carrito-producto small {
     font-size: .75rem;
 }
@@ -59,6 +72,7 @@
 .carrito-acciones {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .carrito-acciones-vaciar {
