--- a/css/pages/productos.css
+++ b/css/pages/productos.css
@@ -31,6 +31,11 @@
   border: solid #dee2e6 1px;
   padding: 1.8rem;
   width: 100%;
+
+}
+.menu-categorias li{
+  list-style: none;
+  margin: 0;
 }
 .menu-categ-title{
   font-family: var(--font-secondary);
@@ -103,6 +108,7 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  margin: 0;
 }
 
 .offcanvas .producto-imagen-off {
