--- a/css/products.css
+++ b/css/products.css
@@ -15,9 +15,7 @@
   flex-direction: column;
   align-items: flex-start;
 }
-.prod-text{
-  text-align: justify;
-}
+
 .prod-text h3, .gal-title {
   font-size: clamp(1.563rem, 1.064rem + 2vw, 2.2rem);
   font-family: var(--font-primary);
@@ -44,6 +42,7 @@
   box-shadow: 0px 4px 45px 0px #0000002E;
   transition: ease-in .1s;
   text-decoration: none;
+  margin: 0;
 }
 
 .img-star-prod {
